RESOLVED FIXED55288
[Qt] Fix the focus in MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=55288
Summary [Qt] Fix the focus in MiniBrowser.
Yael
Reported 2011-02-25 19:45:40 PST
Currently, loading pages such as www.google.com show a caret blinking both in the address bar and in the search box. This is really annoying :)
Attachments
Patch. (2.51 KB, patch)
2011-02-25 19:50 PST, Yael
kling: review+
kling: commit-queue-
Patch. (2.51 KB, patch)
2011-02-26 07:31 PST, Yael
no flags
Yael
Comment 1 2011-02-25 19:50:58 PST
Created attachment 83919 [details] Patch. Basic focus functionality. Note that isVisible() is called before the view is created thus the extra check.
Andreas Kling
Comment 2 2011-02-26 05:32:15 PST
Comment on attachment 83919 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=83919&action=review > Source/WebKit2/UIProcess/API/qt/qwkpage.cpp:168 > + return view->isActive(); No null check for 'view'? > Source/WebKit2/UIProcess/API/qt/qwkpage.cpp:173 > + return view->hasFocus(); No null check for 'view'? > Source/WebKit2/UIProcess/API/qt/qwkpage.cpp:178 > + return view ? view->isVisible() : false; return view && view->isVisible();
Andreas Kling
Comment 3 2011-02-26 05:33:05 PST
(In reply to comment #1) > Note that isVisible() is called before the view is created thus the extra check. D'oh. Another case of I-went-straight-to-the-patch-review-interface.
Yael
Comment 4 2011-02-26 07:31:26 PST
WebKit Commit Bot
Comment 5 2011-02-26 07:53:18 PST
Comment on attachment 83941 [details] Patch. Clearing flags on attachment: 83941 Committed r79791: <http://trac.webkit.org/changeset/79791>
WebKit Commit Bot
Comment 6 2011-02-26 07:53:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.